package PS.GP;
import "proto/config.proto";

message Config {
  optional DataConfig input_graph = 1;
  optional DataConfig output_graph = 2;
  optional ParsaConfig parsa = 3;
}

message ParsaConfig {
  optional int32 num_partitions = 1 [default = 8];
  // optional int32 bloomfilter_k = 2 [default = 2];
  // optional float bloomfilter_m_ratio = 3 [default = 4];

  optional int32 stage0_block_size = 4 [default = 100000];
  optional int32 stage0_blocks = 5 [default = 0];
  optional int32 stage0_warm_up_blocks = 6 [default = 0];

  optional int32 stage1_block_size = 7 [default = 100000];
  optional int32 stage1_blocks = 14 [default = 10000000];
  optional int32 stage1_warm_up_blocks = 8 [default = 0];

  optional int32 max_cached_cost_value = 9 [default = 100];
  optional int32 data_buff_size_in_MB = 10 [default = 1000];

  optional int32 clear_nbset_per_num_blocks = 13 [default = 1];

  // optional int32 block_size = 4 [default = 100000];
  // optional int32 V_size = 6 [default = 1000000];

  // do random partition
  optional bool randomly_partition_U = 11 [default = false];
  optional bool randomly_partition_V = 12 [default = false];
  // optional bool run_baseline = 10 [default = false];

  optional bool validate = 15 [default = false];
}

message Call {
  enum Command {
    PARTITION_U_STAGE_0 = 1;
    PARTITION_U_STAGE_1 = 2;
    PARTITION_V = 3;
  }
  required Command cmd = 1;
}
